crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__the_sstore_sentry_reads_the_whole_regular_gas.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: "&views"
---
{
  "gas limit 100000000, detained": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20036213,
      "state": 97920,
      "history": 30800,
      "history_bytes": 350,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 20164933
    },
    "result_gas": {
      "total_gas_spent": 20164933,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 350,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x9ff306c8eef577b74334fa0a9a18f93dc7af7c1930d65bcc00eb0d7d9342cfb3",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x2"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "gas limit 100000000, plain": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20036213,
      "state": 97920,
      "history": 30800,
      "history_bytes": 350,
      "reservoir_remaining": 0,
      "floor": 15000,
      "gas_used": 20164933
    },
    "result_gas": {
      "total_gas_spent": 20164933,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 0
    },
    "usage": {
      "data_size": 350,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x6e7952f3cc2475a86031ead1466f3db93d29bcc93c30383eb054f6827b4f83d3",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x2"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "gas limit 300000000, detained": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20036213,
      "state": 97920,
      "history": 30800,
      "history_bytes": 350,
      "reservoir_remaining": 99871280,
      "floor": 15000,
      "gas_used": 20164933
    },
    "result_gas": {
      "total_gas_spent": 20164933,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99871280
    },
    "usage": {
      "data_size": 350,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x9ff306c8eef577b74334fa0a9a18f93dc7af7c1930d65bcc00eb0d7d9342cfb3",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x2"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  },
  "gas limit 300000000, plain": {
    "result": {
      "kind": "success",
      "reason": "Stop",
      "output": "0x",
      "created": null,
      "logs": []
    },
    "gas": {
      "regular": 20036213,
      "state": 97920,
      "history": 30800,
      "history_bytes": 350,
      "reservoir_remaining": 99871280,
      "floor": 15000,
      "gas_used": 20164933
    },
    "result_gas": {
      "total_gas_spent": 20164933,
      "state_gas_spent": 97920,
      "refunded": 0,
      "floor_gas": 15000,
      "reservoir_remaining": 99871280
    },
    "usage": {
      "data_size": 350,
      "write_records": 1
    },
    "limit_stop": null,
    "oracle_reads": [],
    "accounts": {
      "0x0000000000000000000000000000000000bef000": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00000": {
        "balance": "0x0",
        "nonce": 1,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x0000000000000000000000000000000000d00001": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0x6e7952f3cc2475a86031ead1466f3db93d29bcc93c30383eb054f6827b4f83d3",
        "created": false,
        "selfdestructed": false,
        "storage": [
          {
            "slot": "0x1",
            "original": "0x0",
            "present": "0x2"
          }
        ]
      },
      "0x4200000000000000000000000000000000000019": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001a": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      },
      "0x420000000000000000000000000000000000001b": {
        "balance": "0x0",
        "nonce": 0,
        "code_hash": "0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470",
        "created": false,
        "selfdestructed": false,
        "storage": []
      }
    }
  }
}
