crates/mega-evm/tests/satin/snapshots/satin__withheld_gas__what_a_halting_callee_burns_is_not_compute.snap
---
source: crates/mega-evm/tests/satin/withheld_gas.rs
expression: "&summaries(&views)"
---
{
  "a 16 MiB memory expansion, gas limit 100000000, detained": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "a 16 MiB memory expansion, gas limit 100000000, plain": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "a 16 MiB memory expansion, gas limit 300000000, detained": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "a 16 MiB memory expansion, gas limit 300000000, plain": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "a code copy of 2^40 bytes, gas limit 100000000, detained": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "a code copy of 2^40 bytes, gas limit 100000000, plain": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "a code copy of 2^40 bytes, gas limit 300000000, detained": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "a code copy of 2^40 bytes, gas limit 300000000, plain": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "a copy of 2^40 bytes, gas limit 100000000, detained": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "a copy of 2^40 bytes, gas limit 100000000, plain": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "a copy of 2^40 bytes, gas limit 300000000, detained": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "a copy of 2^40 bytes, gas limit 300000000, plain": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "a hash of 2^40 bytes, gas limit 100000000, detained": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "a hash of 2^40 bytes, gas limit 100000000, plain": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "a hash of 2^40 bytes, gas limit 300000000, detained": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "a hash of 2^40 bytes, gas limit 300000000, plain": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "a log of 2^40 bytes, gas limit 100000000, detained": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "a log of 2^40 bytes, gas limit 100000000, plain": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "a log of 2^40 bytes, gas limit 300000000, detained": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "a log of 2^40 bytes, gas limit 300000000, plain": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "a memory copy of 2^40 bytes, gas limit 100000000, detained": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "a memory copy of 2^40 bytes, gas limit 100000000, plain": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "a memory copy of 2^40 bytes, gas limit 300000000, detained": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "a memory copy of 2^40 bytes, gas limit 300000000, plain": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "a precompile rejecting its input, gas limit 100000000, detained": "success Stop; stop -; regular 98723772 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751052; data_size 310 write_records 0; logs 0 accounts 6",
  "a precompile rejecting its input, gas limit 100000000, plain": "success Stop; stop -; regular 98723772 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751052; data_size 310 write_records 0; logs 0 accounts 6",
  "a precompile rejecting its input, gas limit 300000000, detained": "success Stop; stop -; regular 197188126 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215406; data_size 310 write_records 0; logs 0 accounts 6",
  "a precompile rejecting its input, gas limit 300000000, plain": "success Stop; stop -; regular 197188126 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215406; data_size 310 write_records 0; logs 0 accounts 6",
  "a value call whose records the caller cannot pay, gas limit 100000000, detained": "success Stop; stop -; regular 20365876 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20393156; data_size 310 write_records 0; logs 0 accounts 6",
  "a value call whose records the caller cannot pay, gas limit 100000000, plain": "success Stop; stop -; regular 20365876 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 20393156; data_size 310 write_records 0; logs 0 accounts 6",
  "an account's code copy of 2^40 bytes, gas limit 100000000, detained": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "an account's code copy of 2^40 bytes, gas limit 100000000, plain": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "an account's code copy of 2^40 bytes, gas limit 300000000, detained": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "an account's code copy of 2^40 bytes, gas limit 300000000, plain": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "an invalid opcode, gas limit 100000000, detained": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "an invalid opcode, gas limit 100000000, plain": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "an invalid opcode, gas limit 300000000, detained": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "an invalid opcode, gas limit 300000000, plain": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "an operand above usize, gas limit 100000000, detained": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "an operand above usize, gas limit 100000000, plain": "success Stop; stop -; regular 98723811 state 0 history 27280 history_bytes 310 reservoir_remaining 0 floor 15000 gas_used 98751091; data_size 310 write_records 0; logs 0 accounts 6",
  "an operand above usize, gas limit 300000000, detained": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6",
  "an operand above usize, gas limit 300000000, plain": "success Stop; stop -; regular 197188165 state 0 history 27280 history_bytes 310 reservoir_remaining 99972720 floor 15000 gas_used 197215445; data_size 310 write_records 0; logs 0 accounts 6"
}
